# MillenniumQuest

./: CMakeLists.txt  README.md
include/millenniumquest/: gmconfig.hpp  sprite.hpp
src/: main.cpp
